# quartz

./: .gitignore  CHANGES.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  build.rs  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: ci.yaml  release.yaml
assets/: 2mono  3cs.scn.ron  3csn.scn.ron  4cs.scn.ron  adsr-clock.scn.ron  adsr.scn.ron  ama  amara  apply.scn.ron  ar  big.scn.ron  big2.scn.ron  butt.scn.ron  circular-scope  comfy-anger  contains  count.scn.ron  curve  delta  distance  feedback.scn.ron  feedback_lp.scn.ron  fft  grace  grace-light  hue-control-equal-order.scn.ron  input  invisible  jam-one-end.scn.ron  jam-zero.scn.ron  key  light  lowcpu  mmb-pan  orb  osc  osc_r  osc_s  oscil.scn.ron  other-rem  (+18 more)
doc/: README.md  arity.md  audio_graphs_as_functions.md  circle_info_text.md  connecting_audio_nodes.md  connecting_circles.md  fft.md  hello_440.md  its_better_if_you_donts.md  navigation.md  rendering_samples.md  resetting_an_audio_graph.md  selecting_audio_devices.md
src/: audio.rs  bloom_settings.rs  circles.rs  commands.rs  components.rs  connections.rs  cursor.rs  detachable_components.rs  functions.rs  lib.rs  main.rs  meshes.rs  nodes.rs  osc.rs  process.rs
