[package]
name = "quartz"
version = "0.1.0"
edition = "2021"
authors = ["amy universe <nopenullnilvoid00@gmail.com>"]
repository = "https://github.com/tomara-x/quartz"
license = "MIT OR Apache-2.0"

[features]
inspector = ["dep:bevy-inspector-egui"]

[dependencies.bevy]
version = "0.13.1"
default-features = false
features = [
  "multi-threaded",
  "bevy_asset",
  "bevy_scene",
  "bevy_winit",
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "tonemapping_luts",
  "default_font",
  "png",
  "x11",
]

[dependencies]
bevy_pancam = "0.11.1"
fundsp = "0.16.0"
cpal = "0.15.2"
assert_no_alloc = "1.1.2"
copypasta = "0.10.1"
serde = "1.0.196"
bevy-inspector-egui = {version = "0.23.2",  default-features = false, optional = true}

# smol amount of optimization for our stuff
[profile.dev]
opt-level = 1

# high optimizations and no debug symbols for deps
[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.release]
panic = 'abort'
strip = true
codegen-units = 1
lto = "thin" # try fat :3

