[package]
name = "quartz"
version = "0.6.0"
edition = "2021"
authors = ["amy universe <nopenullnilvoid00@gmail.com>"]
repository = "https://github.com/tomara-x/quartz"
license = "MIT OR Apache-2.0"

[features]
inspector = ["dep:bevy-inspector-egui"]

[dependencies.bevy]
version = "0.14.0-rc.3"
default-features = false
features = [
  "multi_threaded",
  "bevy_asset",
  "bevy_scene",
  "bevy_state",
  "bevy_winit",
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "tonemapping_luts",
  "default_font",
  "png",
  "x11",
  #"webgl2",

  # TODO remove once fixed #13571
  "bevy_pbr",
]

[dependencies]
bevy_pancam = {version = "0.11.1", git = "https://github.com/tomara-x/bevy_pancam"}
fundsp = {version = "0.18.0", default-features = false}
#cpal = {version = "0.15.3", features = ["jack", "wasm-bindgen"]}
cpal = {version = "0.15.3", features = ["jack"]}
copypasta = "0.10.1"
serde = "1"
rosc = "0.10.1"
crossbeam-channel = "0.5"
bevy-inspector-egui = {version = "0.24",  default-features = false, optional = true}

# smol amount of optimization for our stuff
[profile.dev]
opt-level = 1

# high optimizations and no debug symbols for deps
[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.release]
panic = 'abort'
strip = true
codegen-units = 1
lto = "fat"

